--- a/CoffeeShop/Views/Products/Shop.cshtml
+++ b/CoffeeShop/Views/Products/Shop.cshtml
@@ -1,12 +1,23 @@
 ﻿@model IEnumerable<CoffeeShop.Models.Product>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<h1>Shop Coffee</h1>
-
-@foreach (var item in Model)
-{
-    <div>
-        <img src="@item.ImageUrl" width="100" />
-        <h3>@item.Name</h3>
-        <p>@item.Price.ToString("C")</p>
+<section class="container mt-5">
+    <h2 class="text-center mb-4">Our Products</h2>
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" />
+                    <div class="card-body text-center">
+                        <h5 class="card-title">@item.Name</h5>
+                        <p class="card-text text-success">@item.Price.ToString("C")</p>
+                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-primary">
+                            View Detail
+                        </a>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
-}
+</section>
